--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "anhskohbo/no-captcha": "^3.7",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.2",
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
         "midtrans/midtrans-php": "^2.6",
